     * Stunned units are now marked with a status icon.
 * Language and i18n:
   * Updated translations: British English, Chinese (Traditional), Croatian,
     French, Galician, Italian, Slovak
 * Terrains:
   * Added Unwalkable Overlay terrain (^Qov)
 * Graphics:
   * Updated brown lich alternative portrait
 * User interface:
   * Healing animations are now played when poison is cured.
   * The recruit and recall commands are restored when right-clicking on a
     leader, but with new semantics -- only that leader's recruits/recalls will
     be presented as options.
   * Fog/shroud clearing has been reworked to be more timely and consistent.
   * The statistics window can now show per-scenario statistics.
 * WML engine:
   * The recall, recruit, prerecall, and prerecruit events will now block
     undoing unless they contain [allow_undo].
   * The cost of a recall/recruit is now paid between the prerecall/prerecruit
     and recall/recruit events. (FR #16711)
   * Sighted events should be reliable, provided the player does not activate
     delayed shroud updates (which is still a major caveat).
   * Added [effect] apply_to=overlay
   * Added [effect] apply_to=experience
   * Added [terrain_type] max_light= and min_light=.
   * Standardize weapon filters, supporting special=, [and], [or], and [not]
     wherever weapons can be filtered.
 * Miscellaneous and bug fixes:
   * Fix invalid memory access crash resulting from deleting all saved games
     in the Load Game dialog
   * Redesigned the hotkey preferences dialog
   * Removed two Khalifate leftovers (Hakim portrait and KHALIFATE_NAMES macro)
   * Hex field size and default terrain are wml configurable
   * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).

Version 1.11.0:
 * Add-ons client:
   * The Update Add-ons dialog has been replaced with an alternate view mode
     for the main Add-ons Manager
   * The Add-ons Manager now allows filtering add-ons by installation status