@@ -98,7 +98,7 @@ void mouse_handler::mouse_motion(int x, int y, const bool browse, bool update, m
 {
 	// we ignore the position coming from event handler
 	// because it's always a little obsolete and we don't need
-	// to hightlight all the hexes where the mouse passed.
+	// to highlight all the hexes where the mouse passed.
 	// Also, sometimes it seems to have one *very* obsolete
 	// and isolated mouse motion event when using drag&drop
 	SDL_GetMouseState(&x,&y);  // <-- modify x and y
@@ -200,7 +200,14 @@ void mouse_handler::mouse_motion(int x, int y, const bool browse, bool update, m
 					}
 				} else {
 					// no selected unit or we can't move it
-					cursor::set(cursor::NORMAL);
+
+					if (selected_hex_.valid() && mouseover_unit != units_.end()
+							&& mouseover_unit->side() == side_num_ ) {
+							// empty hex field selected and unit on our site under the cursor
+						cursor::set(dragging_started_ ? cursor::MOVE_DRAG : cursor::MOVE);
+					} else {
+						cursor::set(cursor::NORMAL);
+					}
 				}
 			}
 		} // end planned unit map scope
@@ -248,6 +255,24 @@ void mouse_handler::mouse_motion(int x, int y, const bool browse, bool update, m
 				}
 			}
 
+			if(selected_hex_.valid()
+					&& selected_unit == units_.end()
+					&& mouseover_unit.valid()
+					&& mouseover_unit != units_.end()) {
+				// Show the route from selected hex to mouseover unit
+				current_route_ = get_route(&*mouseover_unit, selected_hex_, viewing_team());
+
+				resources::whiteboard->create_temp_move();
+
+				if(!browse) {
+					gui().set_route(&current_route_);
+				}
+			} else if (selected_unit == units_.end()) {
+				current_route_.steps.clear();
+				gui().set_route(NULL);
+				resources::whiteboard->erase_temp_move();
+			}
+
 			unit_map::iterator iter = mouseover_unit;
 			if (iter != units_.end())
 				un = &*iter;
@@ -255,7 +280,7 @@ void mouse_handler::mouse_motion(int x, int y, const bool browse, bool update, m
 				un = NULL;
 		} //end planned unit map scope
 
-		if (un && current_paths_.destinations.empty() &&
+		if ( (!selected_hex_.valid()) && un && current_paths_.destinations.empty() &&
 			!gui().fogged(un->get_location()))
 		{
 			if (un->side() != side_num_) {
@@ -405,7 +430,7 @@ map_location mouse_handler::current_unit_attacks_from(const map_location& loc) c
 	return res;
 }
 
-pathfind::marked_route mouse_handler::get_route(unit* un, map_location go_to, team &team) const
+pathfind::marked_route mouse_handler::get_route(const unit* un, map_location go_to, team &team) const
 {
 	// The pathfinder will check unit visibility (fogged/stealthy).
 	const pathfind::shortest_path_calculator calc(*un, team, units_, teams_, map_);
@@ -433,7 +458,7 @@ bool mouse_handler::right_click_show_menu(int x, int y, const bool browse)
 		wb::future_map_if_active raii;
 		unit = find_unit(selected_hex_);
 	}
-	if (selected_hex_.valid() && unit != units_.end()) {
+	if (selected_hex_.valid()) {
 		select_hex(map_location(), browse);
 		return false;
 	} else {
@@ -464,7 +489,7 @@ bool mouse_handler::left_click(int x, int y, const bool browse)
 		u = find_unit(selected_hex_);
 
 		//if the unit is selected and then itself clicked on,
-		//any goto command is cancelled
+		//any goto command is canceled
 		if (u != units_.end() && !browse && selected_hex_ == hex && u->side() == side_num_) {
 			u->set_goto(map_location());
 		}
@@ -538,13 +563,26 @@ bool mouse_handler::left_click(int x, int y, const bool browse)
 		}
 	}
 	//otherwise we're trying to move to a hex
-	else if((!browse || resources::whiteboard->is_active()) &&
-			selected_hex_.valid() && selected_hex_ != hex &&
-	         u != units_.end() && u.valid() &&
-	         (u->side() == side_num_ || resources::whiteboard->is_active()) &&
-		     clicked_u == units_.end() &&
-		     !current_route_.steps.empty() &&
-		     current_route_.steps.front() == selected_hex_) {
+	else if (
+			// the old use case: move selected unit to mouse hex field
+			( (!browse || resources::whiteboard->is_active()) &&
+					selected_hex_.valid() && selected_hex_ != hex &&
+					u != units_.end() && u.valid() &&
+					(u->side() == side_num_ || resources::whiteboard->is_active()) &&
+					clicked_u == units_.end() &&
+					!current_route_.steps.empty() &&
+					current_route_.steps.front() == selected_hex_
+			)
+			|| // the new use case: move mouse unit to selected hex field
+			( (!browse || resources::whiteboard->is_active()) &&
+					selected_hex_.valid() && selected_hex_ != hex &&
+					clicked_u != units_.end() &&
+					!current_route_.steps.empty() &&
+					current_route_.steps.back() == selected_hex_
+					&& u == units_.end()
+					&& clicked_u->side() == side_num_
+			)
+	) {
 
 		// Ignore this command if commands are disabled.
 		if ( commands_disabled )
@@ -552,7 +590,7 @@ bool mouse_handler::left_click(int x, int y, const bool browse)
 
 		// If the whiteboard is active, it intercepts any unit movement
 		if (resources::whiteboard->is_active()) {
-				// Unselect the current hex, and create planned move for whiteboard
+				// deselect the current hex, and create planned move for whiteboard
 				selected_hex_ = map_location();
 				gui().select_hex(map_location());
 				gui().clear_attack_indicator();
@@ -566,9 +604,10 @@ bool mouse_handler::left_click(int x, int y, const bool browse)
 
 		// Otherwise proceed to normal unit movement
 		} else {
-			//Don't move if the selected unit already has actions
+			//Don't move if the unit already has actions
 			//from the whiteboard.
-			if (resources::whiteboard->unit_has_actions(&*u)) {
+			if (resources::whiteboard->unit_has_actions(
+					u != units_.end() ? &*u : &*clicked_u )) {
 				return false;
 			}
 
@@ -632,8 +671,38 @@ void mouse_handler::select_hex(const map_location& hex, const bool browse, const
 				}
 			}
 		}
+		return;
+	}
 
-	} else {
+	if (hex.valid() && u == units_.end()) {
+		// compute unit in range of the empty selected_hex field
+
+		gui_->unhighlight_reach();
+
+		pathfind::paths reaching_unit_locations;
+
+		pathfind::paths clicked_location;
+		clicked_location.destinations.insert(hex);
+
+		for(unit_map::iterator u = units_.begin(); u != units_.end(); ++u) {
+			bool invisible = u->invisible(u->get_location());
+
+			if (!gui_->fogged(u->get_location()) && !u->incapacitated() && !invisible)
+			{
+
+				const pathfind::paths& path = pathfind::paths(map_,units_,
+						*u, teams_, false, true,
+						teams_[gui_->viewing_team()], path_turns_, false, false);
+
+				if (path.destinations.find(hex) != path.destinations.end()) {
+					reaching_unit_locations.destinations.insert(u->get_location());
+					gui_->highlight_another_reach(clicked_location);
+				}
+			}
+		}
+		gui_->highlight_another_reach(reaching_unit_locations);
+	}
+	else {
 		gui().unhighlight_reach();
 		current_paths_ = pathfind::paths();
 		current_route_.steps.clear();
@@ -684,7 +753,7 @@ bool mouse_handler::move_unit_along_current_route()
  * whether via a mouse click or executing whiteboard actions. Continued moves
  * (including goto execution) can bypass this and call ::move_unit() directly.
  *
- * @param[in]   route           The route to be travelled. The unit to be moved is at the beginning of this route.
+ * @param[in]   route           The route to be traveled. The unit to be moved is at the beginning of this route.
  * @param[out]  interrupted     This is set to true if information was uncovered that warrants interrupting a chain of actions (and set to false otherwise).
  *
  * @returns The number of hexes entered. This can safely be used as an index
@@ -1050,7 +1119,7 @@ std::set<map_location> mouse_handler::get_adj_enemies(const map_location& loc, i
 }
 
 /**
- * Causes attackable hexes to be higlighted.
+ * Causes attackable hexes to be highlighted.
  *
  * This checks the hexes that the provided unit can attack. If there is a valid
  * target there, that location is inserted into current_paths_.destinations.
